Process Hacker

1.3.0.5
 * FIXED:
   * System information window resizing
   * "Overflow error" exceptions
   * Problems with the search button

1.3.0.0
 * NEW:
   * Process tree using TreeViewAdv
   * Process properties window with statistics and graphs
   * System Information Window with statistics and graphs
   * Detailed token information, including source, owner and primary group
   * Information about remote handles to events, mutants, sections and tokens
   * Terminator tool - tries many techniques to terminate processes
   * Highlighting for UAC elevated processes and processes in job objects
   * Struct reader for examining PEBs and TEBs - note that this can be 
     extended by writing your own definitions
   * Better tray icon - displays a graph, and the tooltip contains the current 
     CPU usage and the process using most of the CPU
 * FIXED:
   * Shows SIDs without names (like Logon IDs) in SDDL format
   * Uses PROCESS_QUERY_LIMITED_INFORMATION on Windows Vista - e.g. on audiodg.exe
   * Symbols are now bound to each process - no more weird stack traces/symbols
   * Handle filtering is now much faster - uses a cache for session ID checking

1.2.6.5
 * A new member of the project - Dean
 * Can view thread usernames, groups and privileges
 * The handle filter window is now faster
 * Added thread start addresses in thread list
 * The process list now has less CPU usage
 * Fixed some processes not having icons

1.2.6.0
 * Fixed the fix for the huge regression - the cause was a double "free" of the same handle
 * Added Assistant - can start processes as any user, including SYSTEM, 
   LOCAL SERVICE and NETWORK SERVICE. Injector's create process item is 
   now deprecated.
 * Fixed service handle leaks which caused service deletions to be 
   undetected.
 * Fixed service list in process tooltips when new own-process services are started and when 
   shared-process services are stopped.

1.2.5.1