@@ -5,6 +5,7 @@ Process Hacker
    * System information window resizing
    * "Overflow error" exceptions
    * Problems with the search button
+   * Process properties for DPCs and Interrupts
 
 1.3.0.0
  * NEW:
